liferay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: eportal
  app: eportal
  name: eportal
spec:
  selector:
    matchLabels:
      app: eportal
  replicas: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eportal
    spec:
      containers:
        - name: eportal
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
